apps/paperless/webservice/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: halo
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      containers:
      - name: paperless
        image: ghcr.io/paperless-ngx/paperless-ngx:3.3.0
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "1000Mi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1300m"
        volumeMounts:
        - name: paperless-storage
          mountPath: /usr/src/paperless/data
          subPath: data
        - name: paperless-storage
          mountPath: /usr/src/paperless/media
          subPath: media
      volumes:
      - name: paperless-storage
        persistentVolumeClaim:
          claimName: paperless-pvc
