apps/paperless/webservice/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-service
  namespace: halo
spec:
  selector:
    app: paperless
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: paperless-service-ext-ip
  namespace: halo
spec:
  allocateLoadBalancerNodePorts: false
  loadBalancerIP: 192.168.8.32
  selector:
    app: paperless
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: LoadBalancer
